Fix spacing issue

--- a/assets/css/tedx.scss
+++ b/assets/css/tedx.scss
@@ -121,7 +121,7 @@ body:not(.depth-3) {
   color: black;
   background: whitesmoke;
   width: 100%;
-  height: calc(100% - 2rem);
+  height: calc(100% - 35px);
   min-height: 5.25rem;
   position: relative;
 
